# KaleiS

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  KaleiS.cabal  LICENSE  MODULE.bazel  README.md  hie.yaml
ast/: BUILD.bazel  README.md  ast_base.cc  ast_base.h  ast_base_unittest.cc  ast_generator.cc  ast_generator.h  ast_generator_unittest.cc
bazel/: extensions.bzl
doc/: IDL.md
doc/specification/: AST.tla  Defines.tla  Generator.tla  IDL.tla  IR.tla  Interfaces.tla  KaleiS.tla  Parser.tla  Property.tla  TLanguage.tla
doc/specification/Compiler/: AST.tla  Defines.tla  Generator.tla  IDL.tla  IR.tla  IRMain.tla  InnerRepresent.tla  Interfaces.tla  KaleiS.cfg  KaleiS.tla  Parser.tla  Property.tla  TLanguage.tla
kaleis/: BUILD.bazel  kaleis_api.cc  kaleis_api.h  kaleis_unittest.cc
src/: BUILD.bazel
src/base/: BUILD.bazel  assert.h  check.h
src/code_generator/: template.h
src/parser/: BUILD.bazel  ast.cc  ast.h  ast_base.cc  ast_base.h  parser.cc  parser.h
