module(
    name = "kaleis",
    version = "0.0.1",
    compatibility_level = 1
)

bazel_dep(name = "tree-sitter-typescript", version = "0.0.1")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3", repo_name = "json")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eugeneo/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
)

kaleis_ext = use_extension("@kaleis//:bazel/extensions.bzl", "ext")
use_repo(kaleis_ext, "tree_sitter", "rapidcheck")
