
filegroup(
    name = "ast",
    srcs = ["ast_base.h", "ast_base.cc"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ast_generator",
    hdrs = ["ast_generator.h", "ast_base.h"],
    srcs = ["ast_generator.cc", ":ast"],
    deps = ["@json//:json",
            "@tree_sitter//:tree_sitter",
            "//src/base:base"]
)

cc_test(
    name = "ast_generator_unittest",
    srcs = ["ast_generator_unittest.cc"],
    deps = [":ast_generator",
            "@googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            "@tree_sitter//:tree_sitter",
            "@tree-sitter-typescript//:tree-sitter-typescript"]
)

cc_test(
    name = "ast_base_unittest",
    srcs = ["ast_base_unittest.cc",],
    deps = [":ast_generator",
            "@googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            "@tree_sitter//:tree_sitter",
            "@tree-sitter-typescript//:tree-sitter-typescript"]
)
